# musik

Musik/: CMakeLists.txt  Musik.iss  Musik.nsi  Musik.prj  Musik.rc  Musik.sln  Musik.vcproj  MusikAboutDlg.cpp  MusikApp.cpp  MusikApp.h  MusikDefines.h  MusikGlobals.cpp  MusikGlobals.h  MusikUtils.cpp  MusikUtils.h  MusikVersion.h  PrefUtil.h  ThreadController.h  changelog.txt  compile.html  license.txt  mswbuild.bat  todo.txt
Musik-testing/: Musik.prj  Musik.vcproj  MusikApp.cpp  MusikApp.h  MusikGlobals.cpp  MusikGlobals.h  MusikUtils.h  changelog.txt  license.txt  todo.txt
Musik.Core/: CMakeLists.txt  MusikCore.sln  MusikCore.vcproj  todo.txt
Musik.Core/include/: MusikArrays.h  MusikBatchAdd.h  MusikConfig.h  MusikCrossfader.h  MusikDir.h  MusikDynDspInfo.h  MusikEQSettings.h  MusikEqualizer.h  MusikFilename.h  MusikFunctor.h  MusikLibrary.h  MusikMP3Info.h  MusikMp3Info.h  MusikOggInfo.h  MusikPlayer.h  MusikPlaylist.h  MusikSongInfoCache.h  MusikThread.h  StdString.h
Musik.Core/src/: Equ.cpp  MusikBatchAdd.cpp  MusikDir.cpp  MusikEqualizer.cpp  MusikFilename.cpp  MusikLibrary.cpp  MusikLibrary.h  MusikMp3Info.cpp  MusikOggInfo.cpp  MusikPlayer.cpp  MusikPlayer.h  MusikPlaylist.cpp  MusikPlaylist.h  MusikThread.cpp  stdafx.h  vcedit.c
Musik.MFC/: ChildView.cpp  MainFrm.cpp  MainFrm.h  MainFrmFunctor.h  Musik.cpp  Musik.h  Musik.rc  Musik.sln  Musik.vcproj  MusikBatchAddFunctor.h  MusikDockBar.cpp  MusikDockBar.h  MusikDynamicText.cpp  MusikDynamicText.h  MusikEditInPlace.cpp  MusikEditInPlace.h  MusikFileDialog.cpp  MusikFileDialog.h  MusikListCtrl.cpp  MusikListCtrl.h  MusikNowPlayingBar.cpp  MusikNowPlayingBar.h  MusikNowPlayingCtrl.cpp  MusikNowPlayingCtrl.h  MusikNowPlayingInfo.cpp  MusikNowPlayingInfo.h  MusikNowPlayingStatic.cpp  MusikNowPlayingStatic.h  MusikPlaylistBar.cpp  MusikPlaylistBar.h  MusikPlaylistCtrl.cpp  (+25 more)
Musik.newui/: CMakeLists.txt  Musik.iss  Musik.prj  Musik.rc  Musik.sln  Musik.vcproj  MusikApp.cpp  MusikApp.h  changelog.txt  todo.txt
Musik.newui/Classes/: MusikListCtrl.cpp  MusikListCtrl.h  MusikSelectionCtrl.cpp  MusikSelectionCtrl.h  MusikSourcesCtrl.cpp  MusikSourcesCtrl.h
Musik.newui/Frames/: MusikFrame.cpp  MusikFrame.h  MusikFrameEvents.cpp
Musik.newui/images/ratings/: rating0.xpm  rating4.xpm  rating5.xpm
Musik.newui/images/sources/: library.xpm
Musik.newui/src/: MusikApp.cpp  MusikApp.h  MusikDragGauge.cpp  MusikDragGauge.h  MusikDragGaugeCtrl.cpp  MusikDragGaugeCtrl.h  MusikFrame.cpp  MusikFrame.h  MusikLibrary.cpp  MusikLibrary.h  MusikListCtrl.cpp  MusikListCtrl.h  MusikNowPlayingCtrl.cpp  MusikNowPlayingCtrl.h  MusikPlayer.cpp  MusikPlayer.h  MusikPlaylist.cpp  MusikPlaylist.h  MusikPlaylistCtrl.cpp  MusikPlaylistCtrl.h  MusikSeekCtrl.cpp  MusikSeekCtrl.h  MusikSelectionAreaCtrl.cpp  MusikSelectionAreaCtrl.h  MusikSelectionCtrl.cpp  MusikSelectionCtrl.h  MusikSimpleQueryCtrl.cpp  MusikSimpleQueryCtrl.h  MusikSourcesCtrl.cpp  MusikSourcesCtrl.h  MusikUTF8.h
Musik.newui/src/images/ratings/: rating2.xpm
Musik/3rd Party/TagHelper/: idtag.cpp  idtag.h
Musik/3rd Party/taglib/: CMakeLists.txt  fileref.cpp
Musik/3rd Party/taglib/toolkit/: tfile.cpp
Musik/Classes/: ActivityAreaCtrl.cpp  ActivityAreaCtrl.h  ActivityBox.cpp  ActivityBox.h  BtnDown.cpp  BtnDown.h  GaugeSeek.cpp  GaugeSeek.h  ListHeader.cpp  ListHeader.h  MusikEQCtrl.cpp  MusikEQCtrl.h  MusikEQGauge.cpp  MusikEQGauge.h  MusikFX.cpp  MusikFX.h  MusikFXGauge.cpp  MusikFXGauge.h  MusikLibrary.cpp  MusikLibrary.h  MusikListCtrl.cpp  MusikListCtrl.h  MusikPlayer.cpp  MusikPlayer.h  MusikPrefs.cpp  MusikPrefs.h  NowPlayingCtrl.cpp  NowPlayingCtrl.h  PictureBox.cpp  PlaylistCtrl.cpp  PlaylistCtrl.h  PlaylistInfoCtrl.cpp  PlaylistInfoCtrl.h  SourcesBox.cpp  SourcesBox.h  Tunage.cpp  Tunage.h  WebServer.cpp  WebServer.h
Musik/Frames/: MusikAutoTaggerFrame.cpp  MusikAutoTaggerFrame.h  MusikFXFrame.cpp  MusikFXFrame.h  MusikFrame.cpp  MusikFrame.h  MusikFrameEvents.cpp  MusikLibraryFrame.cpp  MusikLibraryFrame.h  MusikPrefsFrame.cpp  MusikPrefsFrame.h  MusikTagFrame.cpp  MusikTagFrame.h  MusikVolumeFrame.cpp  MusikVolumeFrame.h
Musik/MMShellHook/: MMShellHook.cpp  MMShellHook.vcproj
Musik/Threads/: ActivityBoxThreads.cpp  ActivityBoxThreads.h  MusikLibraryThreads.cpp  MusikLibraryThreads.h  MusikTagThreads.cpp  MusikTagThreads.h  MusikThreads.cpp  MusikThreads.h  PlaylistCtrlThreads.cpp  PlaylistCtrlThreads.h
Musik/contrib/playlists/: mistagged_files.mpd  mp3_vbr_files.mpd  not_played_for_at_least_3_months.mpd  played_this_month.mpd  songs_added_today.mpd  top_10_most_played_in_last_2_weeks.mpd  top_10_rated_songs_played_this_year.mpd
Musik/data/: CMakeLists.txt  about.htm
Musik/genlocal/: Makefile  cs.po  de.po  de.po.poedit  es.po  fr.po  fr.po.poedit  it.po  nb.po  nl.po  pt_BR.po  wxMusik.po
Musik/images/: tray.xpm
Musik/images/ratings/: rating1.xpm  rating3.xpm
Musik/images/sources/: netstream.xpm  nowplaying.xpm
Musik/locale/cs/: wxMusik.mo  wxstd.mo
Musik/locale/de/: wxMusik.mo  wxstd.mo
Musik/locale/es/: wxMusik.mo  wxstd.mo
Musik/locale/fr/: wxMusik.mo  wxstd.mo
Musik/locale/it/: wxMusik.mo  wxstd.mo
Musik/locale/nb/: wxMusik.mo
Musik/locale/nl/: wxMusik.mo
Musik/locale/pt_BR/: wxMusik.mo  wxstd.mo
Musik/shibatch/: Equ.cpp  Fftsg_fl.cpp
musikCore/: CMakeLists.txt  license.txt  musikCore.sln  musikCore.vcproj  todo.txt
musikCore/include/: musikArrays.h  musikBatchAdd.h  musikBatchRetag.h  musikConfig.h  musikCrossfader.h  musikDir.h  musikDynDspInfo.h  musikEQSettings.h  musikEqualizer.h  musikFilename.h  musikFunctor.h  musikLibrary.h  musikMp3Info.h  musikOggInfo.h  musikPlayer.h  musikPlaylist.h  musikRemoveOld.h  musikTask.h  musikThread.h  paramlist.hpp
musikCore/src/: Equ.cpp  Fftsg_fl.cpp  musikBatchAdd.cpp  musikBatchRetag.cpp  musikCrossfader.cpp  musikDir.cpp  musikDynDspInfo.cpp  musikEQSettings.cpp  musikEqualizer.cpp  musikFilename.cpp  musikFunctor.cpp  musikLibrary.cpp  musikMp3Info.cpp  musikOggInfo.cpp  musikPlayer.cpp  musikPlaylist.cpp  musikRemoveOld.cpp  musikTask.cpp  musikThread.cpp  vcedit.c
(+142 files in other folders)
